--- a/versions/v0.2.md
+++ b/versions/v0.2.md
@@ -23,7 +23,7 @@ permalink: /versions/v0.2/
   * [Future work](#future-work)
   * [Glossary](#glossary)
 
-<!-- Added by: erikpronk, at: Wed May 11 09:52:35 PDT 2022 -->
+<!-- Added by: erikpronk, at: Wed May 11 10:22:17 PDT 2022 -->
 
 <!--te-->
 ## Introduction
@@ -32,7 +32,7 @@ ICCT’s Projection of Aviation Carbon Emissions (PACE) model is a global aviati
 The model currently uses [2019 activity and CO<sub>2</sub> data](https://theicct.org/publication/co2-emissions-from-commercial-aviation-2013-2018-and-2019/) from ICCT’s Global Aviation Carbon Assessment (GACA) model as its baseline. The decarbonization levers include fuel efficiency improvement, use of sustainable aviation fuels (SAF), introduction of zero-emission planes (hydrogen and electric), demand reduction in response to higher fuel prices, and modal shift to high-speed rail. The model iterates through each analysis year; the changes in traffic, energy, and emissions in one year will affect the modelled outcome of the next.
 
 ![Diagram
-Description automatically generated](media/image1.png)
+Description automatically generated](/PACE-doc/assets/ModelFlowchart.png)
 
 Figure 1. Model flow chart for each analysis year.
 
@@ -46,7 +46,7 @@ In addition, all input data are structured in the [tidy data](https://cran.r-pro
 The PACE model performs analysis on the level of operational segment. Figure 1 shows how we define segments. We use the Boeing Commercial Market Outlook (CMO) and its 12 regions to divide traffic into region pairs. The CMO contains passenger traffic flow between 41 region pairs consolidates all other traffic into a “Rest of World” catchall. GACA data was used to extract the “Rest of World” traffic into omitted region pairs, deriving a total of 126 region pairs after excluding 18 region pairs where no passenger traffic was observed in 2019. We break down the operations within each region pair based on trip destination (domestic vs. international), aircraft type, and distance band, which results in 1,550 unique segments globally. These will be referred to simply as “segments” for the rest of this document. Note that only intra-region segments will have a domestic sub-segment, such as North America-North America, China-China, and so on.
 
 ![Graphical user interface, application
-Description automatically generated](media/image2.png)
+Description automatically generated](/PACE-doc/assets/OperationalSegments.png)
 
 Figure 2. PACE model operational segments.
 
@@ -92,7 +92,7 @@ In all the following analysis years, the model adjusts each segment’s CAGR bas
 
 After adjusting CAGR based on demand reduction rates, the model applies the CAGR onto previous year (Y1)’s RPK by segment (S).
 
-RPK<sub>S,y2</sub> = RPK<sub>S,y1</sub> \* (1 - PctRPKreduction<sub>S,y1</sub>) \* (1 + CAGR<sub>S,y1</sub>)
+$$\text{RP}K_{S,y2} = RKP_{S,y1}*\left( 1 - PctRPKreduction_{S,y1} \right)*(1 + CAGR_{S,y1})$$
 
 The overall change in RPK is saved to inform the fleet growth calculation in the Turnover Module (see Section 2). The model also stores the adjusted RPK and CAGR of each segment for demand response calculations later.
 
@@ -106,11 +106,11 @@ The overall fleet growth is assumed to be consistent with overall RPK growth. Ho
 
 The stock turnover function first takes in the fleet CAGR by aircraft class to calculate the total fleet size for each class. The function then adds one year of age to each row of the “stock by age” data and applies the survival rate matched from year-over-year survival curves. These curves are characterized by a Weibull distribution function, and they represent the fraction of vehicles surviving from one year to the next. ICCT developed these curves as part of an unpublished consultant report to Argonne National Laboratory in 2011. The fleet broken down by age is given for the base year. In this case, for each aircraft type (T), the vehicle stock in a calendar year (CY) of a given delivery year (DY) is calculated as:
 
-Stock<sub>T,CY,DY</sub>= Stock<sub>T,CY−1,DY </sub>× Survival<sub>T</sub>(CY−DY)
+$$\text{Stoc}k_{T,CY,DY} = Stock_{T,CY - 1,DY}*Survival_{T}*(CY - DY)$$
 
 Age 0 stock of each class equals the gap between projected total fleet size and total number of survived aircraft at age 1+. The age 0 stock (i.e., new sales) is then broken down by propulsion, based on the sales share of hydrogen and electric aircraft in that year, which are user inputs.
 
-Stock<sub>T,CY,DY</sub>= ProjectedFleetSize<sub>T,CY,  </sub>- ΣStock<sub>T,CY</sub>
+$$\text{Stoc}k_{T,\text{CY},\text{DY}} = ProjectedFleetSize_{T,\text{CY}} - \sum_{}^{}{\text{Stoc}k_{T,CY}}$$
 
 #### Zero emission planes (ZEPs)
 
@@ -136,20 +136,20 @@ Because the reference (factor = 1) is new aircraft delivered in the base year, n
 
 Once we have the normalized average technical efficiency factors, we merge them with the baseline fuel efficiency (MJ/RPK) data (broken down by segment). The payload efficiency factors and traffic efficiency factors, both based on user inputs, are also merged. The traffic efficiency factors are multiplied by the user-specified formation flying scaler to reflect the further improvement in efficiency. Multiplying the baseline fuel efficiency (Y0) with all three of the efficiency factors of that year results in the modelled fuel efficiency of each segment in that year (Y1):
 
-MJ/RPK<sub>Y1</sub> = MJ/RPK<sub>Y0</sub>\* TechnicalEfficiency <sub>Y1</sub> \* PayloadEfficiency <sub>Y1</sub> \* TrafficEfficiency <sub>Y1</sub>
+$$\frac{\text{MJ}}{\text{RK}P_{Y1}} = \frac{\text{MJ}}{\text{RP}K_{Y0}}*TechnicalEfficiency_{Y1}*PayloadEfficiency_{Y1}*TrafficEfficiency_{Y1}$$
 
 ### 5\. Fuels
 
 The Fuels module calculates the blend rate of SAF and the weighted average carbon intensity of each propulsion type. The carbon intensity inputs are on the feedstock level when different feedstocks are available for the same fuel type. The module processes the inputs to generate the carbon intensity of each fuel type and ultimately each propulsion type (Figure 3).
 
 ![Graphical user interface, application
-Description automatically generated](media/image3.png)
+Description automatically generated](/PACE-doc/assets/PropulsionAndFuel.png)
 
 Figure 3. Propulsion methods and fuel types modelled. Fuel type names and feedstock names are specific variable names used in the model.
 
 First, the model calculates the total energy demand for each segment (propulsion specific), for both passenger and freight operations:
 
-MJ = RPK \* MJ/RPK + FTK \* MJ/FTK
+$$MJ = RPK*\frac{\text{MJ}}{\text{RPK}} + FTK*\frac{\text{MJ}}{\text{FTK}}$$
 
 The module then processes the SAF blend share from user inputs based on the total kerosene demand and SAF volume inputs. When total kerosene demand is greater than total SAF supply, the gap is filled by conventional jet A. If total SAF supply exceeds total kerosene demand, the kerosene demand would be entirely fulfilled by SAF, based on the biofuel vs. synthetic fuel split in the supply. SAF blend shares always add up to 100%.
 
@@ -159,7 +159,7 @@ The model then calculates the weighted average carbon intensity of each fuel typ
 
 This module simply performs the multiplication of energy demand and fuel emissions intensity to calculate the total CO<sub>2</sub> emissions for each segment.
 
-MJ \* CO<sub>2</sub>/MJ = CO<sub>2</sub>
+$$MJ*\frac{CO_{2}}{\text{MJ}} = CO_{2}$$
 
 ### 7\. Demand
 
@@ -197,13 +197,13 @@ Table 2. Air travel’s demand elasticities to price used in the model.
 
 In each analysis year, the module updates the total passenger count, fuel burn, and emissions for each route-aircraft type combo, based on the segment-level changes in traffic and energy consumption compared to previous year. The change in demand for each route-aircraft combo is then calculated based on the increase in ticket price, as below:
 
-PriceInc = FuelBurn(L) / TotalPax \* SafPriceDiff ($/L) \* PassThrough
+$$PriceInce = \frac{\text{FuelBurn}\left\lbrack L \right\rbrack}{\text{TotalPax}}*SafPriceDiff\left\lbrack \frac{\$}{L} \right\rbrack*PassThrough$$
 
-PctPriceInc = (PriceInc + AvgFare) / PriceInc
+$$PctPriceInc = \frac{PriceInc + AvgFare}{\text{PriceInc}}$$
 
-NewPax = TotalPax \* (1 + Elasticity \* PctPriceInc)
+$$NewPax = TotalPax*\left( 1 + Elasticity*PctPriceInc \right)$$
 
-NewRPK = NewPax \* Distance
+$$NewRPK = NewPax*Distance$$
 
 The PassThrough variable refers to the percentage of increase in fuel costs that airlines typically pass on to consumers by increasing ticket prices. This pass-through rate is a user input.
 
@@ -225,11 +225,11 @@ Input data for belly and dedicated FTKs for the first year is required. The bell
 
 A single global growth rate value is used to project freight growth. This growth rate is unaffected by carbon pricing. However, the split between belly and dedicated freight can change. The FTK/RTK ratio is kept constant, so belly freight FTKs grow according to growth in passenger traffic. The remaining freight is assigned to dedicated freight. A summary of the equations:
 
-**NewTotalFTK = OldTotalFTK \* (1** + **FreightCAGR)**
+$$NewTotalFTK = OldTotalFTK*\left( 1 + FreightCAGR \right)$$
 
-**NewBellyFTK = FTKPaxRTKRatio \* RPK / 10**
+$$NewBellyFTK = FTKPaxRTKRatio*\frac{\text{RPK}}{10}$$
 
-**NewDedicatedFTK = NewTotalFTK – NewBellyFTK**
+$$NewDedicatedFTK = NewTotalFTK - NewBellyFTK$$
 
 #### Freight emissions
 
@@ -237,15 +237,13 @@ The belly and dedicated FTKs are multiplied by the energy intensity to calculate
 
 The new energy efficiency of freight is calculated separately for belly and dedicated freight but follows the same formula.
 
-NewMJperFTK = OriginalMJperFTK \* TechEfficiencyImprov \* PayloadEfficiencyImprov \* EnRouteEfficiencyImprov
+$$NewMJperFTK = OriginalMJperFTK*TechEfficiencyImprov*PayloadEfficiencyImprove*EnRouteEfficencyImprov$$
 
-Here OringinalMJperFTK refers to the freight energy intensity in the base year. The EfficiencyImprov values are all relative to the base year efficiencies as well. As mentioned earlier, the module classifies freight carriage according to aircraft class and stage length. Each combination of these two variables has its own efficiency value.
+Here OriginalMJperFTK refers to the freight energy intensity in the base year. The EfficiencyImprov values are all relative to the base year efficiencies as well. As mentioned earlier, the module classifies freight carriage according to aircraft class and stage length. Each combination of these two variables has its own efficiency value.
 
 We assume that no belly freight is carried on zero-emission aircraft and none of the dedicated freighters are zero-emission aircraft. Total emissions from freight then becomes:
 
-FreightEmissions =
-
-(BellyFTK \* MJperFTKBelly + DedicatedFTK \* MJperFTKDedicated) \* CO<sub>2</sub>perMJKersosene
+$$FreightEmissions = \left( BellyFTK*MJperFTKBelly + DedicatedFTKDedicated \right)*CO_{2}\text{perMJKerosene}$$
 
 ## Scenario inputs
 The PACE model can take in various user inputs for modeling customized scenarios. The table below shows the user/scenario inputs for ICCT’s Vision 2050 report.
