Add authors, remove v0.1, rename v0.2 -> v1.0
to match version tag on model: https://github.com/theicct/PACE/releases/tag/v1.0.0.

--- a/versions/v1.0.md
+++ b/versions/v1.0.md
@@ -1,11 +1,12 @@
 ---
 layout: page
-title: 'PACE v0.2 Documentation'
-permalink: /versions/v0.2/
+title: 'PACE v1.0 Documentation'
+permalink: /versions/v1.0/
 ---
 ## Table of contents
 <!--ts-->
   * [Introduction](#introduction)
+     * [Acknowledgments](#acknowledgments)
   * [Modules](#modules)
      * [1. Traffic](#1-traffic)
      * [2. Turnover](#2-turnover)
@@ -41,6 +42,10 @@ It is worth noting that the model treats SAF supply and cost as exogenous variab
 This documentation describes the inputs, calculations, and outputs of each module. There are two types of inputs: background inputs that enable model functionalities, and user-specific assumptions for various modeling scenarios. The 1.0 version of the model was used to model 2020-2050 emissions for ICCT’s “Vision 2050: Aligning aviation with the Paris Agreement” report. The “scenario inputs” section describes the specific inputs used for this project.
 
 In addition, all input data are structured in the [tidy data](https://cran.r-project.org/web/packages/tidyr/vignettes/tidy-data.html) format. Every column is a variable. Every row is an observation. Preparing data in such a format is crucial to using the model.
+
+### Acknowledgments
+
+PACE was first developed in 2022 by Xinyi Sola Zheng, Jayant Mukhopadhaya, Erik Pronk, and Dan Rutherford.
 
 ## Modules
 The PACE model performs analysis on the level of operational segment. Figure 1 shows how we define segments. We use the Boeing Commercial Market Outlook (CMO) and its 12 regions to divide traffic into region pairs. The CMO contains passenger traffic flow between 41 region pairs consolidates all other traffic into a “Rest of World” catchall. GACA data was used to extract the “Rest of World” traffic into omitted region pairs, deriving a total of 126 region pairs after excluding 18 region pairs where no passenger traffic was observed in 2019. We break down the operations within each region pair based on trip destination (domestic vs. international), aircraft type, and distance band, which results in 1,550 unique segments globally. These will be referred to simply as “segments” for the rest of this document. Note that only intra-region segments will have a domestic sub-segment, such as North America-North America, China-China, and so on.
