Add minor changes to v2.0 docs

--- a/versions/v2.0.md
+++ b/versions/v2.0.md
@@ -92,7 +92,7 @@ Table 1. Traffic annual growth rates.
 
 Since belly freight is carried on passenger aircraft, its volume is determined by passenger traffic growth. The freight growth rate is applied to dedicated freighter operations only. We also assume that no belly freight is carried on zero-emission aircraft and none of the dedicated freighters are zero-emission aircraft. 
 
-In all the following analysis years, the model adjusts each segment’s CAGR based on the percentages of revenue passenger-kilometer (RPK) reduction from ticket price increase in the previous year. These percentages of reduction are calculated in the Demand Module (see Section 7). For analysis years after 2030, when modal shift inputs are given, percentages of traffic shifted to rail are applied to relevant segments. Due to a lack of granular freight pricing data, the model does not incorporate demand response mechanism for dedicated freight.
+In all the following analysis years, the model adjusts each segment’s CAGR based on the percentages of revenue tonne-kilometer (RTK) reduction from ticket price increase in the previous year. These percentages of reduction are calculated in the Demand Module (see Section 7). For analysis years after 2030, when modal shift inputs are given, percentages of traffic shifted to rail are applied to relevant segments. Due to a lack of granular freight pricing data, the model does not incorporate demand response mechanism for dedicated freight.
 
 After adjusting CAGR based on demand reduction rates, the model applies the CAGR onto previous year (Y1)’s RTK by segment (S).
 
@@ -155,7 +155,7 @@ Figure 3. Propulsion methods and fuel types modelled. Fuel type names and feedst
 
 First, the model calculates the total energy demand for each segment (propulsion specific), for both passenger and freight operations:
 
-$$MJ = RTK*\frac{\text{MJ}}{\text{RTK}}\frac{\text{MJ}}{\text{RPK}} + FTK*\frac{\text{MJ}}{\text{FTK}}$$
+$$MJ = RTK*\frac{\text{MJ}}{\text{RTK}} + FTK*\frac{\text{MJ}}{\text{FTK}}$$
 
 The model takes user-provided assumptions on SAF supply at the country or regional level and translates them into global averages that can be applied consistently across all aviation segments. First, SAF volumes are aggregated from the country level up to the model’s regional structure. Regional values are then summed into a single global supply pool, under the simplifying assumption that SAF is traded internationally and not restricted to the regions where it is produced.
 
@@ -253,7 +253,7 @@ Table 2. Air travel’s demand elasticities to price used in the model.
 
 In each analysis year, the module updates the total passenger count, fuel burn, and emissions for each route-aircraft type combo, based on the segment-level changes in traffic and energy consumption compared to previous year. The change in demand for each route-aircraft combo is then calculated based on the increase in ticket price, as below:
 
-$$PriceInce = \frac{\text{FuelBurn}\left\lbrack L \right\rbrack}{\text{TotalPax}}*SafPriceDiff\left\lbrack \frac{\$}{L} \right\rbrack*PassThrough$$
+$$PriceInce = \frac{\text{FuelBurn}\left\lbrack L \right\rbrack}{\text{TotalPax}}*FuelCostDiff\left\lbrack \frac{\$}{L} \right\rbrack*PassThrough$$
 
 $$PctPriceInc = \frac{PriceInc + AvgFare}{\text{PriceInc}}$$
 
@@ -276,23 +276,23 @@ The PACE model can take in various user inputs for modeling customized scenarios
 
 Table 3. Model inputs that offer flexibility through user definition.
 
-| Variables            | Definition                                                                                                               | Units  |
-|----------------------|--------------------------------------------------------------------------------------------------------------------------|--------|
-| Technical Efficiency | New aircraft fuel efficiency                                                                                             | \----  |
-| Payload Efficiency   | Share of maximum structural payload carried by airlines; proxy for load factor and one input into operational efficiency | \----  |
-| Traffic Efficiency   | Relative airport and air traffic management efficiency; one input into operational efficiency.                           | \----  |
-| Formation Flying     | Formation flying scaler for traffic efficiency                                                                           | \----  |
-| Fleetwide Efficiency | Product of base year efficiency and technical, payload, and traffic efficiency                                           | MJ/RPK |
-| ZEP Sales Share      | Sales share of zero-emission planes                                                                                      | %      |
-| ZEP Sales Number     | Number of zero-emission planes delivered                                                                                 | \----  |
-| SAF Blend            | Country or region average SAF blending ratio                                                                             | EJ     |
-| SAF Cost             | SAF price                                                                                                                | $/L    |
-| Feedstock Share      | Share within a fuel type based on volume                                                                                 | %      |
-| Pass Through         | Fuel cost increase passed on to consumers                                                                                | %      |
-| Modal Shift          | RPK shifted to rail by segment                                                                                           | %      |
-| Engine NOx           | Fleetwide engine NOx emission factor and new engine NOx emission factor, relative to base year                           | \----  |
-| Engine PM            | Fleetwide engine PM emission factor and new engine PM emission factor, relative to base year                             | \----  |
-| Contrail Avoidance   | Share of contrail-producing flights with avoidance maneuvers implemented, by route group                           | \----  |
+| Variables            | Definition                                                                                                                                      | Units    |
+|----------------------|-------------------------------------------------------------------------------------------------------------------------------------------------|----------|
+| Technical Efficiency | New aircraft fuel efficiency, relative to base year                                                                                             | fraction |
+| Payload Efficiency   | Share of maximum structural payload carried by airlines; proxy for load factor and one input into operational efficiency, relative to base year | fraction |
+| Traffic Efficiency   | Relative airport and air traffic management efficiency; one input into operational efficiency, relative to base year                            | fraction |
+| Formation Flying     | Formation flying scaler for traffic efficiency                                                                                                  | \----    |
+| Fleetwide Efficiency | Product of base year efficiency and technical, payload, and traffic efficiency                                                                  | MJ/RPK   |
+| ZEP Sales Share      | Sales share of zero-emission planes                                                                                                             | %        |
+| ZEP Sales Number     | Number of zero-emission planes delivered                                                                                                        | \----    |
+| SAF Blend            | Country or region average SAF blending ratio                                                                                                    | %        |
+| SAF Cost             | SAF price                                                                                                                                       | $/L      |
+| Feedstock Share      | Share within a fuel type based on volume                                                                                                        | %        |
+| Pass Through         | Fuel cost increase passed on to consumers                                                                                                       | %        |
+| Modal Shift          | RPK shifted to rail by segment                                                                                                                  | %        |
+| Engine NOx           | Fleetwide engine NOx emission factor and new engine NOx emission factor, relative to base year                                                  | fraction |
+| Engine PM            | Fleetwide engine PM emission factor and new engine PM emission factor, relative to base year                                                    | fraction |
+| Contrail Avoidance   | Share of contrail-producing flights with avoidance maneuvers implemented, by route group                                                        | %        |
 
 ## Future work
 We are planning to extend the model’s capability for conducting country-level analyses. Our base year data have country details, so the model could either downscale results to countries or take in country-specific inputs to make projections. 
