Re-release PACE-docs v1.0

--- a/versions/v1.0.md
+++ b/versions/v1.0.md
@@ -55,6 +55,13 @@ Description automatically generated](/PACE-doc/assets/OperationalSegments.png)
 
 Figure 2. PACE model operational segments.
 
+The 4 by 4 aircraft class and distance band matrix was selected because each combination in the matrix has distinct emission intensity profiles, based on ICCT's 2019 GACA dataset. Figure 3 below shows the average CO2 per RPK as well as share of global total traffic and emissions of each aircraft-distance combination.
+
+![Graphical user interface, application
+Description automatically generated](/PACE-doc/assets/CO2perRPK.jpg)
+
+Figure 3. CO2 intensity (per RPK), activity share, and emissions share by flight distance and aircraft type.
+
 The modeling processes of passenger operations will be explained first. Section 8 separately describes the methods used for freight, which is modelled at lower fidelity in the GACA model. In the actual model, the freight calculations are integrated into respective modules and do not have a stand-alone module.
 
 ### 1\. Traffic
@@ -145,12 +152,12 @@ $$\frac{\text{MJ}}{\text{RK}P_{Y1}} = \frac{\text{MJ}}{\text{RP}K_{Y0}}*Technica
 
 ### 5\. Fuels
 
-The Fuels module calculates the blend rate of SAF and the weighted average carbon intensity of each propulsion type. The carbon intensity inputs are on the feedstock level when different feedstocks are available for the same fuel type. The module processes the inputs to generate the carbon intensity of each fuel type and ultimately each propulsion type (Figure 3).
+The Fuels module calculates the blend rate of SAF and the weighted average carbon intensity of each propulsion type. The carbon intensity inputs are on the feedstock level when different feedstocks are available for the same fuel type. The module processes the inputs to generate the carbon intensity of each fuel type and ultimately each propulsion type (Figure 4).
 
 ![Graphical user interface, application
 Description automatically generated](/PACE-doc/assets/PropulsionAndFuel.png)
 
-Figure 3. Propulsion methods and fuel types modelled. Fuel type names and feedstock names are specific variable names used in the model.
+Figure 4. Propulsion methods and fuel types modelled. Fuel type names and feedstock names are specific variable names used in the model.
 
 First, the model calculates the total energy demand for each segment (propulsion specific), for both passenger and freight operations:
 
